--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,11 @@ strong {
     font-weight: var(--fw-bold);
 }
 
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
 /* Button */
 
 .btn {
