--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
     --clr-light: #fff;
     --clr-dark: #303030;
-    --clr-accent: #26d3ea;
+    --clr-accent: #9e71f3;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
