--- a/css/style.css
+++ b/css/style.css
@@ -476,15 +476,16 @@ h3 { font-size: var(--fs-h3); }
     margin-left: 3em;
 }
 
-.portfolio-item-individual .img-container {
-    background: var(--clr-dark);
-}
-
 .portfolio-item-individual img {
     width: 100%;
     height: 400px;
     overflow: hidden;
     object-fit: cover;
+}
+
+.portfolio-item-link {
+    text-align: center;
+    margin-bottom: 5em;
 }
 
 
